RESOLVED FIXED41537
Some http tests fail on Windows with Cygwin 1.7
https://bugs.webkit.org/show_bug.cgi?id=41537
Summary Some http tests fail on Windows with Cygwin 1.7
Brian Weinstein
Reported 2010-07-02 13:31:41 PDT
Some http tests fail on Windows with Cygwin 1.7, because LayoutTestControllerWin::resolveCygwinPath fails, because: DWORD result = ::SHGetValueW(HKEY_LOCAL_MACHINE, TEXT("SOFTWARE\\Cygnus Solutions\\Cygwin\\mounts v2\\/"), TEXT("native"), &keyType, &rootPath, &rootPathSize); fails, due to a configuration change on Cygwin 1.7
Attachments
[PATCH] Fix (2.17 KB, patch)
2010-07-02 13:34 PDT, Brian Weinstein
sfalken: review+
bweinstein: commit-queue-
Brian Weinstein
Comment 1 2010-07-02 13:34:01 PDT
Created attachment 60399 [details] [PATCH] Fix
WebKit Review Bot
Comment 2 2010-07-02 13:36:23 PDT
Attachment 60399 [details] did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style', '--no-squash']" exit_code: 1 WebKitTools/DumpRenderTree/win/LayoutTestControllerWin.cpp:620: Tab found; better to use spaces [whitespace/tab] [1] WebKitTools/DumpRenderTree/win/LayoutTestControllerWin.cpp:621: Tab found; better to use spaces [whitespace/tab] [1] WebKitTools/DumpRenderTree/win/LayoutTestControllerWin.cpp:622: Tab found; better to use spaces [whitespace/tab] [1] WebKitTools/DumpRenderTree/win/LayoutTestControllerWin.cpp:623: Tab found; better to use spaces [whitespace/tab] [1] WebKitTools/DumpRenderTree/win/LayoutTestControllerWin.cpp:624: Tab found; better to use spaces [whitespace/tab] [1] WebKitTools/DumpRenderTree/win/LayoutTestControllerWin.cpp:625: Tab found; better to use spaces [whitespace/tab] [1] WebKitTools/DumpRenderTree/win/LayoutTestControllerWin.cpp:626: Tab found; better to use spaces [whitespace/tab] [1] WebKitTools/DumpRenderTree/win/LayoutTestControllerWin.cpp:627: Tab found; better to use spaces [whitespace/tab] [1] Total errors found: 8 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Brian Weinstein
Comment 3 2010-07-02 13:40:24 PDT
Landed in r62400.
Note You need to log in before you can comment on or make changes to this bug.