Some http tests fail on Windows with Cygwin 1.7 https://bugs.webkit.org/show_bug.cgi?id=41537

Reviewed by Steve Falkenburg.

With Cygwin 1.7, the registry key at SOFTWARE\\Cygnus Solutions\\Cygwin\\mounts v2\\/
doesn't exist anymore, because the mount points are stored in /etc/fstab. However, we
just need root mount point, which is defined in SOFTWARE\\Cygwin\\setup.

* DumpRenderTree/win/LayoutTestControllerWin.cpp:
(resolveCygwinPath): Fall back to SOFTWARE\\Cygwin\\setup if
    SOFTWARE\\Cygnus Solutions\\Cygwin\\mounts v2\\/ doesn't work.



Canonical link: https://commits.webkit.org/53318@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@62400 268f45cc-cd09-0410-ab3c-d52691b4dbfc